# GP

./: gradle.properties  settings.gradle
app/src/main/cpp/: CMakeLists.txt  Cpp.md  program.cpp
app/src/main/cpp/3rdLib/: CMakeLists.txt  imgui.cmake  stb.cmake
app/src/main/cpp/3rdLib/stb/: stb_image.h
app/src/main/cpp/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
app/src/main/cpp/source/runtime/core/base/: profiling.cpp  profiling.h  ring_buffer.cpp  ring_buffer.h
app/src/main/cpp/source/runtime/core/log/: android_out.cpp  android_out.h  log_system.cpp  log_system.h
app/src/main/cpp/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  axis_aligned2D.cpp  axis_aligned2D.h  math.cpp  math.h  math_header.h  math_marcos.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  transform2D.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
app/src/main/cpp/source/runtime/core/meta/: json.h  serializer.h
app/src/main/cpp/source/runtime/function/character/: character.cpp  character.h
app/src/main/cpp/source/runtime/function/controller/: character_controller.cpp  character_controller.h
app/src/main/cpp/source/runtime/function/event/: event.cpp  event.h  mouse_event.cpp  mouse_event.h  window_event.cpp  window_event.h
app/src/main/cpp/source/runtime/function/framework/component/: component.h
app/src/main/cpp/source/runtime/function/framework/level/: level.cpp  level.h
app/src/main/cpp/source/runtime/function/framework/object/: object.cpp  object.h  object_id_allocator.cpp  object_id_allocator.h
app/src/main/cpp/source/runtime/function/framework/world/: world_manager.cpp  world_manager.h
app/src/main/cpp/source/runtime/function/global/: global_context.cpp  global_context.h
app/src/main/cpp/source/runtime/function/render/: render_api.cpp  render_api.h  render_buffer.cpp  render_buffer.h  render_camera.cpp  render_camera.h  render_camera_controller.cpp  render_camera_controller.h  render_command.cpp  render_command.h  render_common.h  render_control.cpp  render_control.h  render_entity.h  render_guid_allocator.h  render_index_buffer.cpp  render_index_buffer.h  render_object.h  render_pass.cpp  render_pass.h  render_pass_base.cpp  render_pass_base.h  render_pipe_line.cpp  render_pipe_line.h  render_pipeline_base.cpp  render_pipeline_base.h  render_render2D.cpp  render_render2D.h  render_render2D_batch.cpp  render_render2D_batch.h  render_resource.cpp  render_resource.h  render_scene.cpp  render_scene.h  render_shader.cpp  render_shader.h  render_shader_library.cpp  render_shader_library.h  render_swap_context.cpp  render_swap_context.h  (+13 more)
app/src/main/cpp/source/runtime/function/render/layer/: render_layer.cpp  render_layer.h  render_layer_stack.cpp  render_layer_stack.h
app/src/main/cpp/source/runtime/function/render/passes/: main_camera_pass.cpp  main_camera_pass.h
app/src/main/cpp/source/runtime/platform/file_service/: file_service.cpp  file_service.h
app/src/main/cpp/source/runtime/resource/asset_manager/: asset_manager.cpp  asset_manager.h
app/src/main/cpp/source/runtime/resource/res_type/common/: level.h  object.h  world.h
app/src/main/cpp/source/runtime/resource/res_type/components/: mesh.h  motor.cpp  motor.h  (+3 more)
(+44 files in other folders)
